fixed center navbar alignment

--- a/style/style.css
+++ b/style/style.css
@@ -59,18 +59,16 @@ a.anchor {
   font-size: 1.2em;
 
   display: flex;
-
-  padding-top: 1em;
+  justify-content: space-between;
+  align-items: center;
 
   color: #fff;
-
-  justify-content: space-between;
 
   position: fixed;
   z-index: 990;
   top: 0;
 
-  height: 2em;
+  height: 3em;
 
   color: #fff;
   background-color: #162136;
@@ -91,14 +89,13 @@ a.anchor {
   flex-direction: row;
 
   margin: 0;
+  padding: 0;
 
   list-style-type: none;
-
-  justify-content: center;
 }
 
 .main-ul__li {
-  margin: 0 4% 0 4%;
+  margin: 0 1em 0 1em;
 }
 
 .main-nav__a {
@@ -340,7 +337,7 @@ a.anchor {
   vertical-align: super;
 }
 
-@media screen and (max-width: 40em) {
+@media screen and (max-width: 55em) {
   #main-nav-cnt {
     display: none;
     flex-direction: column;
@@ -380,7 +377,7 @@ a.anchor {
   }
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 55em) {
   .main-nav {
     display: flex !important;
   }
